--- a/localization/russian/event_localization/feudalization_events_l_russian.yml
+++ b/localization/russian/event_localization/feudalization_events_l_russian.yml
@@ -1,9 +1,9 @@
 ﻿l_russian:
- feudalization.0002.t:0 "Roman Decay in [county_being_castled.GetName]" #NT!
- feudalization.0002.desc:0 "After the empire lost its control over [county_being_castled.GetName], the remnants of old castles were never removed. I haven't walked through [county_being_castled.GetName] in years but after a tour today it felt like a different place.\nThe walls, different\nThe buildings, different\nThe markets, different\nAnd huge walls were erected to defend from our neighbours eyeing our precious lands. This is clearly not a Roman province anymore. No, it's something else...." #NT!
- feudalization.0002.option.a:0 "This is interesting" #NT!
- feudalization.0002.option.a.tooltip:0 "Due to you dicovering feudalization, some of your counties will convert to castles until you convert to $feudal_government$" #NT!
+ feudalization.0002.t:0 "Римский упадок в [county_being_castled.GetName]"
+ feudalization.0002.desc:0 "После того, как империя потеряла контроль над [county_being_castled.GetName], остатки старых замков так и не были снесены. Я не ходил по [county_being_castled.GetName] много лет, но после сегодняшней поездки я почувствовал, что это другое место.\nСтены - другие\nЗдания - другие\nРынки - другие\nИ были возведены огромные стены для защиты от соседей, присматривающихся к нашим драгоценным землям. Это явно уже не римская провинция. Нет, это что-то другое...."
+ feudalization.0002.option.a:0 "Это интересно"
+ feudalization.0002.option.a.tooltip:0 "Из-за того, что вы открыли для себя феодальную систему, некоторые из ваших графств превратятся в замки, пока вы не перейдете к $feudal_government$"
 
- feudalization.0003.t:0 "Feudalization" #NT!
- feudalization.0003.desc:0 "After the empire lost its control over our lands, we have slowly drifted away from their traditions and doctrines. Without the huge imperial treasury, the loyalty of our subjects was no longer easily assured and we started granting fiefs to our subjects in return for their oaths and tribute. We have strayed far from the days of old and can no longer truly call our realm Roman." #NT!
- feudalization.0003.option.a:0 "It's time to turn a new page" #NT!
+ feudalization.0003.t:0 "Феодализация"
+ feudalization.0003.desc:0 "После того, как империя потеряла контроль над нашими землями, мы постепенно отдалились от их традиций и доктрин. Без огромной имперской казны лояльность наших подданных уже нельзя было легко обеспечить, и мы начали давать нашим подданным феодальные владения в обмен на их клятвы и дань. Мы далеко отошли от древних времен и больше не можем по-настоящему называть наши владения римскими."
+ feudalization.0003.option.a:0 "Пришло время перевернуть новую страницу"
