--- a/localization/russian/event_localization/migration_events_l_russian.yml
+++ b/localization/russian/event_localization/migration_events_l_russian.yml
@@ -1,56 +1,56 @@
 ﻿l_russian:
 
- migration.0001.t:0 "The Migrators" #NT!
- migration.0001.desc:0 "Limited land and inter-tribal politics has driven [attacker.GetName] and his loyal supporters to the borders of our lands. They come looking for fertile lands, not war, and are willing to be amicable with our authorities in order to enter a mutually beneficial agreement." #NT!
- migration.0001.option.a:0 "We are willing to grant them our lands but not independence" #NT!
- migration.0001.option.a.tooltip:0 "You grant [attacker.GetName] the war goal and in return, vassalize them. They may not accept this offer" #NT!
- migration.0001.option.b.tooltip:0 "You gift [attacker.GetName] 500 [gold|E] and in return get peace. They may not fulfill their end of the deal" #NT!
- migration.0001.option.c.tooltip:0 "The war rages on" #NT!
- migration.0001.option.b:0 "I'm sure gold will keep them away" #NT!
- migration.0001.option.c:0 "These barbarians dare to threaten us?" #NT!
+ migration.0001.t:0 "Мигранты"
+ migration.0001.desc:0 "Ограниченность земель и межплеменная политика привели [attacker.GetName] и его верных сторонников к границам наших земель. Они идут за плодородными землями, а не за войной, и готовы помириться с нашими властями, чтобы заключить взаимовыгодное соглашение."
+ migration.0001.option.a:0 "Мы готовы предоставить им наши земли, но не независимость"
+ migration.0001.option.a.tooltip:0 "Вы даете [attacker.GetName] цель войны и взамен делаете их вассалами. Они могут не принять это предложение"
+ migration.0001.option.b.tooltip:0 "Вы дарите [attacker.GetName] 500 [Concept (gold), (золота)|E] и взамен получаете мир. Они могут не выполнить свою часть сделки"
+ migration.0001.option.c.tooltip:0 "Война продолжает бушевать"
+ migration.0001.option.b:0 "Я уверен, что золото удержит их"
+ migration.0001.option.c:0 "Эти варвары смеют угрожать нам?"
 
- migration.0002.t:0 "A Call For Peace" #NT!
- migration.0002.desc:0 "An emmisary from [defender.GetName] arrived at our war camp this morning. [defender.GetSheHe|U] brought a treaty from his lord which will grant us our target but in return, we will become vassals. Although it isn't what we came for, it will end much bloodshed." #NT!
- migration.0002.option.b:0 "We shall never bend our knees!" #NT!
- migration.0002.option.b.tooltip:0 "The war rages on" #NT!
- migration.0002.option.a.tooltip:0 "You win the war but in return are vassalized by [defender.GetName]" #NT!
- migration.0002.option.a:0 "Our blood isn't worth being bled on their swords" #NT!
+ migration.0002.t:0 "Призыв к миру"
+ migration.0002.desc:0 "Этим утром в наш военный лагерь прибыл посланник от [defender.GetName]. [defender.GetSheHe|U] принес договор от своего властелина, который предоставит нам нашу цель, но взамен мы станем вассалами. Хотя мы пришли не за этим, это положит конец большому кровопролитию."
+ migration.0002.option.b:0 "Мы никогда не преклоним колени!"
+ migration.0002.option.b.tooltip:0 "Война продолжает бушевать"
+ migration.0002.option.a.tooltip:0 "Вы выигрываете войну, но взамен становаитесь вассалом [defender.GetName]"
+ migration.0002.option.a:0 "Наша кровь не стоит крови на их мечах"
 
- migration.0003.t:0 "A Call For Peace" #NT!
- migration.0003.desc:0 "An emmisary from [defender.GetName] arrived at our war camp this morning. [defender.GetSheHe|U] brought a chest of gold from his lord and a request to end this war. Although it isn't what we came for, it will end much bloodshed." #NT!
- migration.0003.option.b:0 "We won't be distracted by petty gold!" #NT!
- migration.0003.option.b.tooltip:0 "The war rages on" #NT!
- migration.0003.option.a.tooltip:0 "You recieved 500 [gold|E] from [defender.GetName] and decided to end this war with a white peace" #NT!
- migration.0003.option.a:0 "Fine, but this isn't the end" #NT!
+ migration.0003.t:0 "Призыв к миру"
+ migration.0003.desc:0 "Этим утром в наш военный лагерь прибыл посланник от [defender.GetName]. [defender.GetSheHe|U] принес сундук с золотом от своего власетлина и просьбу прекратить эту войну. Хотя мы пришли не за этим, это положит конец большому кровопролитию."
+ migration.0003.option.b:0 "Не будем отвлекаться на мелкое золото!"
+ migration.0003.option.b.tooltip:0 "Война продолжает бушевать"
+ migration.0003.option.a.tooltip:0 "Вы получили 500 [Concept (gold), (золота)|E] от [defender.GetName] и согласились закончить эту войну белым миром"
+ migration.0003.option.a:0 "Хорошо, но это не конец"
 
- migration.0004.t:0 "Our Treaty Denied!" #NT!
- migration.0004.desc:0 "Our emmisary returned from [attacker.GetName]'s war camp. [attacker.GetSheHe|U] brought dire news and informed us that our generous treaty was declined!" #NT!
- migration.0004.option.a:0 "How tragic for them" #NT!
+ migration.0004.t:0 "Наше предложение отклонено!"
+ migration.0004.desc:0 "Наш посланник вернулся из военного лагеря [attacker.GetName]. [attacker.GetSheHe|U] принес ужасные новости и сообщил нам, что наше щедрое предложение отклонено!"
+ migration.0004.option.a:0 "Как трагично для них"
 
- migration_acceptance:0 "Migration Acceptance" #NT!
+ migration_acceptance:0 "Принятие миграции"
 
 
- migration.0005.t:0 "The Natives" #NT!
- migration.0005.desc:0 "Ever since we migrated to these new lands, the original inhabitants have shown us nothing but love, hospitality, and peace. As surprising as it is, it is advisable that we reciprocate these actions so that we live in harmony." #NT!
- migration.0005.option.a:0 "Our cultures will soon be one!" #NT!
- migration.0005.option.b:0 "People must know of our great diplomacy!" #NT!
+ migration.0005.t:0 "Коренные жители"
+ migration.0005.desc:0 "С тех пор, как мы переселились на эти новые земли, коренные жители не проявляли к нам ничего, кроме любви, гостеприимства и мира. Как это ни удивительно, желательно, чтобы мы отвечали на эти действия взаимностью, чтобы жить в гармонии."
+ migration.0005.option.a:0 "Наши культуры скоро станут едины!"
+ migration.0005.option.b:0 "Люди должны знать о нашей великой дипломатии!"
 
- migration.0006.t:0 "The Natives" #NT!
- migration.0006.desc:0 "Ever since we migrated to these new lands, the original inhabitants have made sure to not anger us and have respected our traditions and our people. As surprising as it is, it is advisable that we reciprocate these actions so that we live in peace." #NT!
- migration.0006.option.a:0 "This will pave the way for a peaceful future" #NT!
- migration.0006.option.b:0 "People must know of our diplomacy!" #NT!
+ migration.0006.t:0 "Коренные жители"
+ migration.0006.desc:0 "С тех пор, как мы мигрировали на эти новые земли, коренные жители старались не злить нас и уважали наши традиции и наш народ. Как ни удивительно, желательно, чтобы мы ответили взаимностью на эти действия, чтобы жить в мире."
+ migration.0006.option.a:0 "Это проложит путь к мирному будущему"
+ migration.0006.option.b:0 "Люди должны знать о нашей великой дипломатии!"
 
- migration.0007.t:0 "The Natives" #NT!
- migration.0007.desc:0 "Ever since we migrated to these new lands, the original inhabitants have made sure that we know that they will not accept us in their homeland. Although this is not surprising, we have to carefully consider our options so that our realm does not fall apart." #NT!
- migration.0007.option.a:0 "Our people won't accept this!" #NT!
- migration.0007.option.b:0 "Let them be" #NT!
+ migration.0007.t:0 "Коренные жители"
+ migration.0007.desc:0 "С тех пор, как мы переселились на эти новые земли, коренные жители позаботились о том, чтобы мы знали, что они не примут нас на своей родине. Хотя это и неудивительно, мы должны тщательно обдумать наши возможности, чтобы наши владения не разделились."
+ migration.0007.option.a:0 "Наш народ этого не приемлет!"
+ migration.0007.option.b:0 "Оставьте их в покое"
 
- migration.0008.t:0 "The Natives" #NT!
- migration.0008.desc:0 "Ever since we migrated to these new lands, the original inhabitants have showed us nothing but hate and rage. Although it isn't surprising, we have to carefully consider our options here to make sure our realm doesn't break." #NT!
- migration.0008.option.a:0 "Our people won't accept this!" #NT!
- migration.0008.option.b:0 "Let them be" #NT!
+ migration.0008.t:0 "Коренные жители"
+ migration.0008.desc:0 "С тех пор, как мы переселились на эти новые земли, коренные жители позаботились о том, чтобы мы знали, что они не примут нас на своей родине. Хотя это и неудивительно, мы должны тщательно обдумать наши возможности, чтобы наши владения не разделились."
+ migration.0008.option.a:0 "Наш народ этого не приемлет!"
+ migration.0008.option.b:0 "Оставьте их в покое"
 
- migration.0015.t:0 "A Call For Migration" #NT!
- migration.0015.desc:0 "Our honourable culture head [attacker.GetName] has called upon us to join his cause to migrate into new fertile lands." #NT!
- migration.0015.option.a:0 "[attacker.GetFirstName] calls for aid and we will answer!" #NT!
- migration.0008.option.b:0 "We cannot afford this endeavour" #NT!
+ migration.0015.t:0 "Призыв к миграции"
+ migration.0015.desc:0 "Наш почтенный культурный преводитель [attacker.GetName] призвал нас присоединиться к его делу по миграции на новые плодородные земли."
+ migration.0015.option.a:0 "[attacker.GetFirstName] зовет на помощь, и мы ответим!"
+ migration.0008.option.b:0 "Мы не можем позволить себе это усилие"
