--- a/localization/russian/event_localization/germanic_events_l_russian.yml
+++ b/localization/russian/event_localization/germanic_events_l_russian.yml
@@ -1,72 +1,72 @@
 ﻿l_russian:
- # Modernize the Frankish Kingdom #NT!
- germanic_events.0001.t:0 "The Modernization" #NT!
- germanic_events.0001.desc:0 "We embraced our traditions for years, but we are at a point where we need a change. The states at our western borders are far ahead of us in terms of technology, government and military. We will modernize our kingdom to keep expanding. Our people need a safe future!" #NT!
- germanic_events.0001.option:0 "This will make our future safe!" #NT!
- germanic_events.0001.option.tooltip:0 "Let us celebrate our reforms!" #NT!
+ # Modernize the Frankish Kingdom
+ germanic_events.0001.t:0 "Модернизация"
+ germanic_events.0001.desc:0 "В течение многих лет мы придерживались наших традиций, но теперь нам нужны перемены. Государства у наших западных границ намного опережают нас с точки зрения технологий, правительства и вооруженных сил. Мы модернизируем наше королевство, чтобы продолжать расширяться. Нашему народу нужно безопасное будущее!"
+ germanic_events.0001.option:0 "Это сделает наше будущее безопасным!"
+ germanic_events.0001.option.tooltip:0 "Давайте праздновать наши реформы!"
 
- # Unite the Frankish Tribes #NT!
- germanic_events.0002.t:0 "The Unification of the Franks" #NT!
- germanic_events.0002.desc:0 "After years of division, the Franks can at last be considered a unified peope much like the Visigoths and the Burgundians. With both sides of the Rhine River united under a single banner, a new era dawns upon the Kingdom of the Franks!" #NT!
- germanic_events.0002.option:0 "United at last!" #NT!
- germanic_events.0002.option.tooltip:0 "The Frankish Kingdom is formed." #NT!
+ # Unite the Frankish Tribes
+ germanic_events.0002.t:0 "Объединение франков"
+ germanic_events.0002.desc:0 "После долгих лет разделения франки,подобно вестготам и бургундам, наконец-то, могут считаться единым народом. Когда обе стороны реки Рейн объединились под единым знаменем, для королевстве франков начинается новая эра!"
+ germanic_events.0002.option:0 "Наконец-то объединились!"
+ germanic_events.0002.option.tooltip:0 "Образуется Франкское королевство."
 
- germanic_events.0003.t:0 "The Frankish Invasion" #NT!
- germanic_events.0003.desc:0 "For centuries, the Romans had greedily kept the fertile lands of Gaul under their control. It was only through Roman weakness that we were allowed to settle the province's northern frontiers as the empire's foederati. The Western Roman Empire has recently collapsed, and the last remaining vestiges of Roman authority in the west is the Domain of Soissons\n\n The rule over Soissons is already a fragile one, with the domain beset on all sides by forces hostile to a Roman-governed polity. As we were the first of the Germanic tribes to settle in Gaul, our claim over the region is strongest and it is time to lay Roman rule to rest in Western Europe." #NT!
- germanic_events.0003.option.a:0 "Send the call!" #NT!
- germanic_events.0003.b:0 "The lands we govern will suffice." #NT!
-
-
- germanic_events.0003.t:0 "The Frankish Invasion" #NT!
- germanic_events.0004.desc:0 "For centuries, the Romans had greedily kept the fertile lands of Gaul under their control. It was only through Roman weakness that we were allowed to settle the province's northern frontiers as the empire's foederati. The Western Roman Empire has recently collapsed, and the last remaining vestiges of Roman authority in the west is the Domain of Soissons\n\n The rule over Soissons is already a fragile one, with the domain beset on all sides by forces hostile to a Roman-governed polity. It is against this precariously situated realm that the Franks have decided to wage war on, hoping to bring an end to Roman rule in Gaul. They now call for us to join in this conquest with the prospect of additional territories for our descendants to settle and thrive upon." #NT!
- germanic_events.0004.a:0 "To arms!" #NT!
- germanic_events.0004.b:0 "It is best if we remain neutral, the lands we govern will suffice." #NT!
+ germanic_events.0003.t:0 "Франкское вторжение"
+ germanic_events.0003.desc:0 "Веками римляне жадно удерживали плодородные земли Галлии под своим контролем. Только из-за слабости римлян нам было позволено заселить северные границы провинции в качестве федератов империи. Западная Римская империя недавно рухнула и последними остатками римской власти на западе является Суассон. \n\n Власть над Суассоном и без того хрупкая, со всех сторон владения окружают силы, враждебные римскому государству. Поскольку мы были первым из германских племен, поселившихся в Галлии, наши притязания на этот регион очень сильны,. Пришло время положить конец римскому владычеству в Западной Европе."
+ germanic_events.0003.option.a:0 "Разошлите призыв!"
+ germanic_events.0003.b:0 "Земли, которой мы управляем, будет достаточно."
 
 
- #should be replaced but readded incase we forgor #NT!
- germanic_events.0005.t:0 "Securing Gaul" #NT!
- germanic_events.0005.desc:0 "As we settle in our new and fertile lands, we must secure our borders from all sides. That especially includes the northern border and our newly conquered lands. The new Frankish kingdom in the north will probably not be satisfied with their part of Gaul and them pushing southwards is a real possibility. That's why I have gathered the best generals in the realm to decide what to do regarding the changes in the north." #NT!
- germanic_events.0005.option.a:0 "Secure the forts!" #NT!
-
- germanic_events.0006.t:0 "The Gothic Threat" #NT!
- germanic_events.0006.desc:0 "As we settle in our new and fertile lands, we must secure our borders from all sides. That especially includes the southern border. The vicious Goths have had their eyes on Upper Gaul ever since they cursed us with their presence and now, I recieve reports of fortifications all along the border. As a clear message of war, we the Franks should not stand idle against this act of aggression! The sooner we strike, the better our chances." #NT!
- germanic_events.0006.option.a:0 "We strike now!" #NT!
-
- germanic_events.0007.t:0 "A Call from the Romans" #NT!
- germanic_events.0007.desc:0 "The day was interrupted when a Roman messanger entered the main chamber and presented us with a personal decree from [ere_emperor_0007.GetFirstName], requesting that we muster our forces and march into the Italian peninsula to seize it from Odoacer. The self-proclaimed King of Italy had violated his duty as a client ruler when he marched against the Emperor, and now we are summoned to take away the Italian crown for ourselves. \n\nDominion over the former Roman heartland will grant us more prestige and power than the other Germanic successor states, but undertaking such an invasion on behalf of Constantinople will be looked down upon by the Ostrogothic Kingdom's subjects." #NT!
- germanic_events.0007.option.a:0 "The peninsula shall fall under the Gothic banner!" #NT!
- germanic_events.0007.option.b:0 "We will not act on behalf of the Romans." #NT!
- germanic_events.0011.option.b:0 "We will bide our time pillaging the countryside until a better opportunity arises." #NT!
-
- germanic_events.0008.t:0 "The Gothic Threat" #NT!
- germanic_events.0008.desc:0 "Having lost the trust of the Eastern Roman government, we have now recieved reports that Constantinople has commanded [ere_italy_invader.GetCulture.GetName] to march into our Italian holdings and rule the land for themselves! Alas, the die is cast, and we must face this new threat in the north to ensure that our victory against Orestes and his weak-willed son will not be short-lived!" #NT!
- germanic_events.0008.option.a:0 "Prepare our forces! We march for war!" #NT!
-
- germanic_events.0009.t:0 "Our Call Declined!" #NT!
- germanic_events.0009.desc:0 "As expected from barbarians, the Ostrogoths refuse to march into the Italian peninsula and eliminate Odoacer as a threat to our interests. Although we hoped to avoid bloodshed among our own ranks, we are left with no other choice than to reclaim Italia and punish the Ostrogoths for taking our demands lightly!" #NT!
- germanic_events.0009.option.a:0 "The Eternal City shall not remain under foreign occupation any longer!" #NT!
-
- ignored_emperor_call:0 "Ignored the Emperor's Decree" #NT!
+ germanic_events.0003.t:0 "Франкское вторжение"
+ germanic_events.0004.desc:0 "Веками римляне жадно удерживали плодородные земли Галлии под своим контролем. Только из-за слабости римлян нам было позволено заселить северные границы провинции в качестве федератов империи. Западная Римская империя недавно рухнула и последними остатками римской власти на западе является Суассон.\n\n Власть Суассона, и без того хрупкая, со всех сторон окружена силами, враждебными римскому государству. Именно против этого ненадежно расположенного королевства франки решили вести войну, надеясь положить конец римскому правлению в Галлии. Теперь они призывают нас присоединиться к этому завоеванию и в награду получить новые территории, на которых наши потомки смогут жить и процветать."
+ germanic_events.0004.a:0 "К оружию!"
+ germanic_events.0004.b:0 "Будет лучше, если мы останемся нейтральными. Земель, которыми мы управляем, достаточно."
 
 
- germanic_events.0010.t:0 "Interference From Italy" #NT!
- germanic_events.0010.desc:0 "After our defeat in Ravenna, the barbarians who stood in the heart of our once great empire have pledged themselves to our government as a client state. It is clear, however, that [italy_holder_dissent.GetName] has other ideas and has been trying to slowly chip away at our influence in Italia. This time, however, [italy_holder_dissent.GetSheHe] has gone beyond his limits! My loyal vicars have come to me with news that [italy_holder_dissent.GetName] has sent his followers to sow dissent in our empire!\n\n This is a clear example of treason and should be handled as such! If we don't react now, we don't know what else [italy_holder_dissent.GetSheHe] will try." #NT!
- germanic_events.0010.option.a:0 "I will not let the Roman crown roll in the dirt!" #NT!
+ #should be replaced but readded incase we forgor
+ germanic_events.0005.t:0 "Защита Галлии"
+ germanic_events.0005.desc:0 "Когда мы обустраиваемся на наших новых и плодородных землях, мы должны защищать наши границы со всех сторон. Это особенно включает в себя северную границу и наши недавно завоеванные земли. Новое франкское королевство на севере, вероятно, не будет удовлетворено своей частью Галлии и их продвижение на юг вполне вероятно. Вот почему я собрал лучших генералов королевства, чтобы решить, что делать с изменениями на севере."
+ germanic_events.0005.option.a:0 "Укрепите форты!"
 
- # Old North #NT!
- germanic_events.0101.t: "Century Storms" #NT!
- germanic_events.0101.desc: "Gah! The days cannot decide whether they should be hot or cold, and so the world shakes around us.\n\nA prominent local merchant of the Romanish variety has come forward in dripping wet rags, complaining that his small fleet of cargo ships capsized in the channel of the island Tanet during a chaotic storm.\n\nWe know the storms of our old home, but lately the sea has been a terrible mistress, violently assaulting us in bitter rages even in the safety of the smallest of crossways." #NT!
- germanic_events.0101.option.a: "I pity the poor [sunken_merchant.GetWomanMan]." #NT!
- germanic_events.0101.option.b: "We can put [sunken_merchant.GetHerHim] in our service instead." #NT!
- germanic_events.0101.option.c: "Oh no, the ship sank... so sad." #NT!
+ germanic_events.0006.t:0 "Готская угроза"
+ germanic_events.0006.desc:0 "Когда мы обустраиваемся на наших новых и плодородных землях, мы должны защищать наши границы со всех сторон. Это особенно включает в себя южную границу. Злобные готы положили глаз на Верхнюю Галлию с тех пор мы будто прокляты не сосуществование с ними. Теперь я получаю донесения об укреплениях вдоль всей границы. В качестве ясного сигнала войны мы, франки, не должны бездействовать против этого акта агрессии! Чем раньше мы нанесем удар, тем выше наши шансы."
+ germanic_events.0006.option.a:0 "Наносим удар сейчас!"
 
- # This is other struggle stuff that isn't Germanic but I don't want to create another file #NT!
- britannia_struggle.7000.t: "Yr Hen Ogledd" #NT!
- britannia_struggle.7000.desc: "The Britons of the Old North have been without a kingdom to call their own for centuries. Long have they been divided into petty, scheming warlords. Today, however, the Britons of the Old North can welcome a new beginning, as they are all now united under one banner - mine.\n\nI now hold the fate of this region in my hands. With the foundation of this kingdom, I hope to usher in a new golden age of faith and glory under [founder.GetFaith.HighGodName]." #NT!
- britannia_struggle.7000.a: "Long may our lands prosper!" #NT!
+ germanic_events.0007.t:0 "Призыв римлян"
+ germanic_events.0007.desc:0 "Римский посланник вошел в главный зал и вручил нам личный указ от [ere_emperor_0007.GetFirstName], требующий, чтобы мы собрали наши силы и двинулись на итальянский полуостров и отбили его у Одоакра. Выступив против императора, самопровозглашенный король Италии нарушил свой долг правителя-клиента и теперь нас призывают забрать себе итальянскую корону. \n\nВладение бывшим сердцем Рима даст нам больше престижа и власти, чем другим германским государствам-преемникам. Но предпринятое от имени Константинополя, такое вторжение будет рассматриваться подданными Остготского королевства как недостойное."
+ germanic_events.0007.option.a:0 "Полуостров должен пасть под готское знамя!"
+ germanic_events.0007.option.b:0 "Мы не будем действовать от имени римлян."
+ germanic_events.0011.option.b:0 "Мы будем грабить сельскую местность пока не появится лучшая возможность."
 
- # Case of the Suebians (For Visigoths) #NT!
- TFE_major_decisions.0023.t:0 "The Case of the Suebians" #NT!
- TFE_major_decisions.0023.desc:0 "We have now united most of the Hispanic territory. Only the question of the Suevi kings remains. What should we do with them?" #NT!
- TFE_major_decisions.0023.a:0 "They are part of Hispania and therefore must be subject to our power!" #NT!
- TFE_major_decisions.0023.b:0 "Galicia is a territory apart from Hispania now. We must focus on our own lands." #NT!
+ germanic_events.0008.t:0 "Готская угроза"
+ germanic_events.0008.desc:0 "Потеряв доверие правительства Восточной Римской империи, мы получили сообщения о том, что Константинополь приказал [ere_italy_invader.GetCulture.GetName] вторгнуться в наши итальянские владения и править землей самостоятельно! Увы, жребий брошен, и мы должны противостоять этой новой угрозе на севере, чтобы наша победа над Орестом и его безвольным сыном не оказалась недолговечной!"
+ germanic_events.0008.option.a:0 "Подготовьте наши силы! Мы идем на войну!"
+
+ germanic_events.0009.t:0 "Наш призыв отклонен!"
+ germanic_events.0009.desc:0 "Как и ожидалось от варваров, остготы отказываются вторгнуться на итальянский полуостров и устранить Одоакра как угрозу нашим интересам. Хотя мы надеялись избежать кровопролития в наших собственных рядах, у нас не осталось другого выбора кроме как вернуть себе Италию и наказать остготов за легкомысленное отношение к нашим требованиям!"
+ germanic_events.0009.option.a:0 "Вечный город больше не будет находиться под иностранной оккупацией!"
+
+ ignored_emperor_call:0 "Проигнорировал Указ Императора"
+
+
+ germanic_events.0010.t:0 "Помехи из Италии"
+ germanic_events.0010.desc:0 "После нашего поражения в Равенне варвары, стоявшие в сердце нашей когда-то великой империи, присягнули нашему правительству как государство-клиент. Однако ясно, что у [italy_holder_dissent.GetName] другие намерения и он пытается постепенно уменьшить наше влияние в Италии. Однако на этот раз [italy_holder_dissent.GetSheHe] перешел всякие границы! Мои верные наместники пришли ко мне с новостями о том, что [italy_holder_dissent.GetName] послал своих последователей сеять инакомыслие в нашей империи!\n\n Это явный пример предательства, и к нему следует относиться соответствующим образом! Если мы не отреагируем сейчас, мы не знаем, что еще [italy_holder_dissent.GetSheHe] предпримет."
+ germanic_events.0010.option.a:0 "Я не позволю римской короне валяться в грязи!"
+
+ # Old North
+ germanic_events.0101.t: "Вековые бури"
+ germanic_events.0101.desc: "Гах! Дни не могут решить, должны ли они быть жаркими или холодными и поэтому мир вокруг нас сотрясается.\n\nИзвестный местный купец романского толка явился в мокрых лохмотьях и пожаловался, что во время хаотичного шторма его небольшой флот грузовых судов перевернулся в русле острова Танет.\n\nМы знаем бури нашего старого дома, но в последнее время море стало ужасной хозяйкой и яростно набрасывается на нас в горькой ярости даже на безопасном перекрестке."
+ germanic_events.0101.option.a: "Мне жаль [sunken_merchant.GetWomanMan]."
+ germanic_events.0101.option.b: "Вместо этого [sunken_merchant.GetHeShe] может служить нам."
+ germanic_events.0101.option.c: "О нет, корабль затонул... так грустно."
+
+ # This is other struggle stuff that isn't Germanic but I don't want to create another file
+ britannia_struggle.7000.t: "Юр Хен Огледд"
+ britannia_struggle.7000.desc: "У бриттов Старого Севера веками не было королевства, которое они могли бы назвать своим. Давно они были разделены на мелких коварных военачальников. Однако сегодня британцы Старого Севера могут приветствовать новое начало, так как все они теперь объединены под одним знаменем - моим.\n\nТеперь судьба этого региона в моих руках. Я надеюсь, что с основанием этого королевства наступит новый золотой век веры и славы [founder.GetFaith.HighGodName]."
+ britannia_struggle.7000.a: "Пусть наши земли процветают!"
+
+ # Case of the Suebians (For Visigoths)
+ TFE_major_decisions.0023.t:0 "Дело свевов"
+ TFE_major_decisions.0023.desc:0 "Сейчас мы объединили большую часть испанской территории. Остается только вопрос о королях свевов. Что нам с ними делать?"
+ TFE_major_decisions.0023.a:0 "Они являются частью Испании и поэтому должны подчиняться нашей власти!"
+ TFE_major_decisions.0023.b:0 "Галисия теперь является территорией, отдельной от Испании. Мы должны сосредоточиться на наших собственных землях."
